# django_aiogram_template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
admin_panel/: admin.py  apps.py  models.py  signals.py  views.py
admin_panel/management/commands/: runbot.py
api/: urls.py  views.py
backend/: config.py  settings.py  urls.py
bot/: calendar.py  callbacks.py  keyboards.py  pagination.py  utils.py
bot/handlers/: __init__.py  menu.py  start.py
bot/misc/: mailing.py
liveconfigs/: admin.py  apps.py  config.py  validators.py
liveconfigs/management/commands/: delete_unused_configs.py
liveconfigs/migrations/: 0002_alter_configrow_options.py
liveconfigs/models/: descriptors.py  models.py
payments/: admin.py  models.py  payment.py
payments/migrations/: 0001_initial.py
users/: admin.py  apps.py  models.py
users/migrations/: 0001_initial.py
